<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_createDeckNavigation"
    tools:context="xyz.miroslaw.gamification_android.createDeck.CreateDeckNavigationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <Button
            android:id="@+id/btn_createDeck_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/createDeck_prev" />

        <Button
            android:id="@+id/btn_createDeck_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/all_next" />

        <TextView
            android:id="@+id/txt_createDeck_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_createDeck_next"
            android:padding="20dp"
            android:text="@string/createDeck_type" />

        <TextView
            android:id="@+id/txt_createDeck_typeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_createDeck_next"
            android:text="1"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</FrameLayout>
